# PitchTempoPlayer

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac
data/: Makefile  Makefile.am  Makefile.in  cplayer.desktop
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  effects.c  effects.h  events.c  events.h  gstreamer.c  gstreamer.h  main.c  main.h  menu.c  menu.h  onclick.c  onclick.h  playlist.c  playlist.h  ptplayer  record.c  record.h
src/.deps/: effects.Po  events.Po  gstreamer.Po  main.Po  menu.Po  onclick.Po  playlist.Po  record.Po
