

bin_PROGRAMS = ptplayer

#spectrum3d_CFLAGS = $(GSTREAMER_CFLAGS) $(GTK_CFLAGS)
#spectrum3d_LDADD = $(GSTREAMER_LIBS) $(GTK_LIBS)

ptplayer_SOURCES = main.c gstreamer.c effects.c events.c menu.c onclick.c playlist.c record.c main.h gstreamer.h effects.h events.h menu.h onclick.h playlist.h record.h 

AM_CPPFLAGS = -DDATADIR='"$(datadir)"'




